--- a/src/shared/ui/Link/Link.module.css
+++ b/src/shared/ui/Link/Link.module.css
@@ -8,7 +8,7 @@
 	border: none;
 	border-radius: var(--border-radius-sm);
 	cursor: pointer;
-	transition: var(--transition-speed-fast);
+	transition: var(--transition-speed-medium) ease-in-out;
 	text-decoration: none;
 }
 
